=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 3.04 - IN DEVELOPMENT

=over

=item *

Fixed bug where it was possible to 'View' the version of a Story or Media 
object currently being edited prior to the View Schedule screen, which caused 
'Edit' button to be present - instead, user can click 'Back'. [Noam Weinstein]

=item *

Ported fix to unpreview a media object when it is deleted 
(instead of just unpublishing it). [David Kaufman]

=item *

Refactored bulk edit in its own classes.  The legacy textarea-based
bulk editing is in L<Krang::BulkEdit::Textarea>.  Xinha-based bulk
editing is provided by L<Krang::BulkEdit::Xinha>. This module largely
use parsing instead of regexes to sanitize/scrub the HTML coming from
Xinha. Xinha's toolbar and the set of allowed block-level is
configurable via subclassing L<Krang::BulkEdit::Xinha::Config>.  This
module also allows to configure whether paragraphs should be split on
BR tags. [Bodo Schulze]

=item *

Pass the browser engine name to the environment via
KRANG_BROWSER_ENGINE. This enables clients to dispatch to
Krang::Markup::SomeBrowserEngine methods. [Bodo Schulze]

=item *

Added modules to filter incoming/outgoing HTML markup according to
what different browser engines' markup commands can handle in WYSIWYG
areas.  The base class L<Krang::Markup> is subclassed by
L<Krang::Markup::Gecko>, L<Krang::Markup::IE> and
L<Krang::Markup::WebKit>. [Bodo Schulze]

=item *

Upgraded L<HTML::Parser> to version 3.56. [Bodo Schulze]

=item * 

Removed Image-Info-1.15.tar.gz from src/ and replaced it with
Image-Size-3.1.1.tar.gz to fix bugs in L<Krang::Media>'s width() and
height() methods in which, for certain valid JPEG images, these
methods returned undef (and for others, returned an arrayref!)
According to its own POD docs, L<Image::Info> is "deprecated, and
should not be used", "has numerous bugs", is only minimally